--- a/todo-drag/package.json
+++ b/todo-drag/package.json
@@ -3,15 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-beautiful-dnd": "^13.1.1",
-    "web-vitals": "^3.5.1"
+    "@babel/core": "7.23.9",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-beautiful-dnd": "13.1.1",
+    "react-redux": "8.1.3",
+    "@reduxjs/toolkit": "1.9.7",
+    "web-vitals": "3.5.1",
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
-    "eslint": "^8.57.0"
+    "@babel/plugin-transform-private-property-in-object": "7.23.4",
+    "eslint": "8.57.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "@babel/core": "7.23.9",
+    "webpack": "5.90.1"
   },
   "overrides": {
     "postcss": "^8.4.31",
@@ -19,7 +31,8 @@
     "@svgr/webpack": "^8.1.0",
     "resolve-url-loader": "^5.0.0",
     "svgo": "^3.2.0",
-    "css-select": "^5.1.0"
+    "css-select": "^5.1.0",
+    "debug": "^4.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
