--- a/todo-drag/package.json
+++ b/todo-drag/package.json
@@ -5,16 +5,19 @@
   "dependencies": {
     "@babel/core": "7.23.9",
     "@babel/plugin-proposal-private-property-in-object": "7.21.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-beautiful-dnd": "13.1.1",
-    "react-redux": "8.1.3",
     "@reduxjs/toolkit": "1.9.7",
-    "web-vitals": "3.5.1",
-    "react-scripts": "5.0.1"
+    "@types/dexie": "^1.3.32",
+    "dexie": "^3.2.4",
+    "react": "18.2.0",
+    "react-beautiful-dnd": "13.1.1",
+    "react-dom": "18.2.0",
+    "react-redux": "8.1.3",
+    "react-scripts": "5.0.1",
+    "web-vitals": "3.5.1"
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "7.23.4",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "eslint": "8.57.0",
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0"
