Add convenience scripts and prevent browser auto-open
- Add root-level npm scripts for easier development
- Set BROWSER=none to prevent auto-opening browser on start

--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "field",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "cd todo-drag && npm start",
+    "build": "cd todo-drag && npm run build",
+    "test": "cd todo-drag && npm test",
+    "install:app": "cd todo-drag && npm install"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.58.0"
   }
