--- a/todo-drag/package.json
+++ b/todo-drag/package.json
@@ -38,7 +38,7 @@
     "debug": "^4.3.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "DISABLE_ESLINT_PLUGIN=true react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
